# token_airdrop_service

./: README.md  main.py  pyproject.toml
smart_contract/: AirDrop.sol
static/js/: script.js
templates/: index.html
