[tool.poetry]
name = "token-airdrop-service"
version = "0.1.0"
description = ""
authors = ["laytn <pwh7121@gmail.com>"]
readme = "README.md"
packages = [{include = "token_airdrop_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
